--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "teamribet-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Temarbet api built with nodejs express postgresql",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Naboni Abebe",
   "license": "ISC",
   "devDependencies": {
     "prisma": "^3.10.0"
