--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "teamribet-api",
+  "name": "temaribet-api",
   "version": "1.0.0",
-  "description": "Temarbet api built with nodejs express postgresql",
+  "description": "Temaribet api built with nodejs express postgresql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Naboni Abebe",
@@ -24,5 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "16.15.0"
   }
 }
