--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma": "^3.13.0"
   },
   "dependencies": {
+    "@emailjs/nodejs": "^2.1.1",
     "@prisma/client": "^3.10.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "generate-password": "^1.7.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
