--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^3.10.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "cloudinary": "^1.34.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -25,6 +26,7 @@
     "generate-password": "^1.7.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
   },
