--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temaribet-api",
   "version": "1.0.0",
-  "description": "Temaribet api built with nodejs express postgresql",
+  "description": "Temaribet api built with nodejs express mongodb",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
   "author": "Naboni Abebe",
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^3.13.0"
+    "prisma": "^4.11.0"
   },
   "dependencies": {
     "@emailjs/nodejs": "^2.1.1",
